# oremedian-resizer

./: pyproject.toml
src/resizer/: resize_imgs.py
tests/: resizer_test.py
